# librtbit-peer-protocol

./: .woodpecker.yml  CLAUDE.md  Cargo.toml  renovate.json
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
benches/: bench.rs
src/: lib.rs
src/extended/: handshake.rs  mod.rs  ut_holepunch.rs  ut_metadata.rs  ut_pex.rs
tests/: message_roundtrip.rs
