[package]
name = "librtbit-peer-protocol"
version = "0.1.0"
edition = "2024"
description = "BitTorrent peer wire protocol implementation for the rtbit client"
license = "MIT"
repository = "http://100.92.54.45:3002/indexarr/librtbit-peer-protocol"

[dependencies]
serde = "1"
serde_derive = "1"
byteorder = "1"
buffers = { git = "http://100.92.54.45:3002/indexarr/librtbit-buffers.git", tag = "v0.1.0", package = "librtbit-buffers" }
bencode = { git = "http://100.92.54.45:3002/indexarr/librtbit-bencode.git", tag = "v0.1.0", package = "librtbit-bencode" }
clone_to_owned = { git = "http://100.92.54.45:3002/indexarr/librtbit-clone-to-owned.git", tag = "v0.1.0", package = "librtbit-clone-to-owned" }
librtbit-core = { git = "http://100.92.54.45:3002/indexarr/librtbit-core.git", tag = "v0.1.0" }
bitvec = "1"
anyhow = "1"
bytes = "1"
itertools = "0.14"
thiserror = "2"
tracing = "0.1"

[patch."https://github.com/AusAgentSmith-org/librtbit-bencode.git"]
librtbit-bencode = { git = "http://100.92.54.45:3002/indexarr/librtbit-bencode.git", tag = "v0.1.0" }

[patch."https://github.com/AusAgentSmith-org/librtbit-buffers.git"]
librtbit-buffers = { git = "http://100.92.54.45:3002/indexarr/librtbit-buffers.git", tag = "v0.1.0" }

[patch."https://github.com/AusAgentSmith-org/librtbit-clone-to-owned.git"]
librtbit-clone-to-owned = { git = "http://100.92.54.45:3002/indexarr/librtbit-clone-to-owned.git", tag = "v0.1.0" }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "bench"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
