[package]
name = "librtbit-peer-protocol"
version = "0.1.4"
edition = "2024"
description = "BitTorrent peer wire protocol implementation for the rtbit client"
license = "MIT"
repository = "http://100.92.54.45:3002/indexarr/librtbit-peer-protocol"

[dependencies]
serde = "1"
serde_derive = "1"
byteorder = "1"
buffers = { git = "https://github.com/TheDancingDeveloper-org/librtbit-buffers.git", package = "librtbit-buffers" }
bencode = { git = "https://github.com/TheDancingDeveloper-org/librtbit-bencode.git", package = "librtbit-bencode" }
clone_to_owned = { git = "https://github.com/TheDancingDeveloper-org/librtbit-clone-to-owned.git", package = "librtbit-clone-to-owned" }
librtbit-core = { git = "https://github.com/TheDancingDeveloper-org/librtbit-core.git" }
bitvec = "1"
anyhow = "1"
bytes = "1"
itertools = "0.14"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
